# Bash_MLOps_exercise

./: .gitignore  Makefile  README.md  Readme.md  pyproject.toml  requirements.txt
logs/: train.logs
prototyping/: data_exploration.ipynb
scripts/: collect.sh  cron.txt  preprocessed.sh  train.sh
src/: helper.py  preprocessed.py  train.py
tests/: test_collect.py  test_model.py  test_preprocessed.py
