[project]
name = "exam-bash-mlops"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas==2.3.3",
    "scikit-learn==1.7.2",
]

[project.optional-dependencies]
dev = [
    "black==25.11.0",
    "ipykernel==7.1.0",
    "ipython==9.7.0",
    "jupyter_client==8.6.3",
    "jupyter_core==5.9.1",
    "matplotlib==3.10.7",
    "uv==0.9.15",
]